# auto-apply-ai

./: .env.example  .gitignore  AGENTS.md  PRODUCT_PLAN.md  README.md  docker-compose.yml  package.json
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 000_create_base_tables.py  001_create_jobs_table.py  002_create_llm_tables.py  003_create_applications.py  004_create_linkedin_sessions.py  005_add_job_match_score.py  006_add_profile_filters.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/middleware/: cost_logging_middleware.py  logging_middleware.py
apps/api/app/models/: __init__.py  application.py  job.py  job_search_profile.py  linkedin_session.py  llm_usage_log.py  resume.py  tailored_resume.py  user.py
apps/api/app/routers/: applications.py  auth.py  health.py  jobs.py  linkedin.py  profiles.py  resumes.py  tailor.py
apps/api/app/schemas/: application.py  auth.py  job.py  job_search_profile.py  linkedin.py  resume.py  tailor.py
apps/api/app/services/: application_service.py  auth_service.py  job_matcher_service.py  linkedin_session_service.py  llm_service.py  queue_service.py  resume_service.py  resume_tailor_service.py
apps/api/app/utils/: logger.py  security.py
apps/api/tests/: conftest.py  test_applications.py  test_auth.py  test_health.py  test_jobs.py  test_jobs_match_score.py  test_linkedin.py  test_profiles.py  test_resumes.py  test_tailor.py  test_wizard_flow.py
docs/: ARCHITECTURE.md
plans/: wizard-refactoring-plan.md
(+89 files in other folders)
